# pub-1379-monitor

./: .gitignore  README.md  docker-build-1379.sh  docker-compose.yml  docker-remove-1379.sh  docker-run-1379.sh  web.dockerfile
conf/: cargo.linux.config  cargo.windows.config  nginx.conf  openresty.conf
conf/conf.d/: allow.ips.conf  deny.ips.conf
conf/lualib/: access_list.lua
conf/redis/: redis.conf  save.redis.conf  sysctl.conf
server-1379/: .env  .gitignore  Cargo.toml  log4rs.yaml
server-1379/src/: main.rs  schema.rs
server-1379/src/configs/: logger.rs  mod.rs  router.rs
server-1379/src/datas/: pg.rs
server-1379/src/frames/: frame.rs  id.rs  mod.rs  status.rs
server-1379/src/handlers/: files.rs  mod.rs  ws_handler.rs
